# auditguard-mcp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  web_app.py
audited_tool_mcp/: policy.py  server.py
auditguard_mcp/: __init__.py  audit.py  models.py  policy.py  privacy.py  rbac.py  server.py
auditguard_mcp/pipeline/: async_runner.py
auditguard_mcp/tools/: __init__.py  customer_api.py  sql_query.py
benchmarks/: latency.py
eval/: README.md  eval_harness.py
examples/agent/: README.md  langgraph_agent.py
scripts/: download_model.py  run_demo.py  seed_data.py
tests/: test_audit.py  test_integration.py  test_policy.py  test_privacy.py  test_rbac.py
web/: index.html
